--- a/Templates/_posts/2014-06-29-REst.md
+++ b/Templates/_posts/2014-06-29-REst.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title: REpresentational State Transfer
+Layout: POST
+Title: REpresentational State Transfer
 ---
 
 Synopsis:
@@ -9,16 +9,30 @@ REST allows interaction with a web-based system via simplified URL's rather than
 
 Description:
 ------------------ 
-RESTful web services use session based authentication, either by establishing a session token via a POST, or using an API key as a POST body argument or as a cookie.
+REST is a means of expressing specific entities in a system by URL path elements, REST is not an architecture but it is an architectural style to build services on top of the Web. REST allows interaction with a web-based system via simplified URL's rather than complex request body or POST parameters.
 Read more:For more details:- [REST Assessment Cheat Sheet](https://www.owasp.org/index.php/REST_Assessment_Cheat_Sheet)  
 
 
 Mitigation:
 ----------------
-RESTful web services should use session based authentication, either by establishing a session token via a POST, or using an API key as a POST body argument or as a cookie. 
+*RESTful web services should use session based authentication, either by establishing a session token via a POST, or using an API key as a POST body argument or as a cookie.Sensitive information should not appear in the URL.
+BAD PRACTICE : https://example.com/controller/<id>/action?apiKey=a53f435643de32
+*Use a secure parser for parsing incoming messages.
+*XML Input Validation must ensure that they are protected against common XML based attacks by using XML-Parsing.
+*The client should send an X-Frame-Options which in turn protects drag'n drop clickjacking attacks.
+*Insecure Direct object reference : It may seem obvious, but if you had a bank account REST web service,
+https://example.com/account/325365436/transfer?amount=$100.00&toAccount=473846376 
+In this case, it would be possible to transfer money from any account to any other account. Not even a random token makes this safe.
+https://example.com/invoice/2362365 
+In this case, it would be possible to get a copy of all invoices. 
 
 For more details:-[REST Security Cheat Sheet](https://www.owasp.org/index.php/REST_Security_Cheat_Sheet) 
 
+RESTFUL WEB SERVICES - http://www.xiom.com/2011/11/20/restful_webservices_testing
+
+INSECURE DIRECT OBJECT REFERENCE -https://www.owasp.org/index.php/Top_10_2010-A4-Insecure_Direct_Object_References
+
+CRYPTOGRAPHIC STORAGE - https://www.owasp.org/index.php/Top_10_2010-A7
 CVSS Base Score:
 ----------------------------
 
