--- a/Templates/_posts/2014-06-29-XSS.md
+++ b/Templates/_posts/2014-06-29-XSS.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title: Cross site scripting (XSS)
+Layout: POST
+title: Cross Site Scripting (XSS)
 ---
 Synopsis:
 ---------------
@@ -8,13 +8,25 @@ Cross site scripting is a vulnerability in which malicious scripts are injected 
 
 Description: 
 ------------------
-XSS can be found anywhere in an application where user input has been taken but not properly encoded. The injected script will be sent to users when the browser executes the script, and a malicious action is performed on the client side. 
+XSS can be found anywhere in an application where user input has been taken but not properly encoded. The injected script will be sent to users when the browser executes the script, and a malicious action is performed on the client side which can be used to steal credentials. 
 
 For more information on XSS:-
 [OWASP guide on XSS](https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)) 
 
 Mitigation: 
-Carefully check each input parameter against a rigorous positive specification (white list) defining the specific characters and format allowed.
+-------------
+
+*Carefully check all the input parameters against a rigorous positive specification (white list) defining the specific characters and format allowed.
+*Don't put untrusted data anywhere into your HTML document.
+*Sanitize HTML Markup with existing libraries such as OWASP AntiSamy,OWASP Java HTML Sanitizer.
+[LINKS]
+OWASP AntiSamy - https://www.owasp.org/index.php/Category:OWASP_AntiSamy_Project 
+OWASP Java HTML Sanitizer - https://www.owasp.org/index.php/OWASP_Java_HTML_Sanitizer_Project 
+PHP Html Purifier - http://htmlpurifier.org/
+JavaScript/Node.JS Bleach - https://github.com/ecto/bleach
+Python Bleach - https://pypi.python.org/pypi/bleach
+*Implement Content Security Policy - Content-Security-Policy: default-src: 'self'; script-src: 'self' static.domain.tld
+CSP- https://www.owasp.org/index.php/Content_Security_Policy
 
 To know more about the primary defences against XSS see:- 
 For more details:-[ Cross Site Scripting Prevention Cheat Sheet](https://www.owasp.org/index.php/XSS_(Cross_Site_Scripting)_Prevention_Cheat_Sheet) 
