--- a/Templates/_posts/2014-06-29-pinning.md
+++ b/Templates/_posts/2014-06-29-pinning.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title: Pinning
+Layout: POST
+Title: Pinning
 ---
 
 Synopsis:
@@ -9,12 +9,19 @@ Pinning is the process of associating a host with their expected X509 certificat
 
 Description:
 -----------------
-Once a certificate or public key is known or seen for a host, the certificate or public key is associated or 'pinned' to the host. If more than one certificate or public key is acceptable, then the program holds a pinset. In this case, the advertised identity must match one of the elements in the pinset.
+Once a certificate or public key is known or seen for a host, the certificate or public key is associated or 'pinned' to the host. If more than one certificate or public key is acceptable, then the program holds a pinset.You should pin anytime you want to be relatively certain of the remote host's id oe when operating in hostile environment.Because applications expect end-to-end security on the secure channels such as VPN,SSL,TLS can be vulnerable.
+
+For more details : [Pinning] https://www.owasp.org/index.php/Certificate_and_Public_Key_Pinning
 
 
 Mitigation:
 ---------------
-For securing the channel in a hostile environment where actors could be malicious and the conference of trust is a liability some guidances are to be followed. For more details:- For more details:-[Pinning Cheat Sheet](https://www.owasp.org/index.php/Pinning_Cheat_Sheet) 
+*Certificate,Public Key,Hashing should always be pinned.
+*If you are working for an organization which practices "egress filtering"as part of Data Loss Prevention(DLP),you will encounter Interception Proxies.Add the interception proxy's public key to your pinset after being instructed to do so by the folks in Risk Acceptance.
+*Pinning in Android,iOS,.NET,OpenSSL is possible and the corresponding files are attached in the link below.
+
+For more details refer to:- For more details:-[Pinning Cheat Sheet](https://www.owasp.org/index.php/Pinning_Cheat_Sheet)
+[User Privacy] https://www.owasp.org/index.php/User_Privacy_Protection_Cheat_Sheet 
 
 
 CVSS Base Score:
