--- a/Templates/_posts/2014-06-29-logging.md
+++ b/Templates/_posts/2014-06-29-logging.md
@@ -1,6 +1,6 @@
 ---
-layout: post
-title: Logging
+Layout: POST
+Title: Logging
 ---
 
 Synopsis:
@@ -10,14 +10,29 @@ Logging is the recording of information into storage that details who performed 
 Description:
 -------------------
 Logging provides a detective method to ensure that the other security mechanisms being used are performing correctly. A good logging strategy should include log generation, storage, protection, analysis, and reporting.
+
 For more details:- [Reviewing Code for Logging Issue](https://www.owasp.org/index.php/Reviewing_Code_for_Logging_Issues).
  
+
+Advantages:
+------------
+*Identifying security incidents and monitoring policy violations.
+*Establishing baselines.
+*Providing information about problems and unusual conditions.
+*Compliance monitoring.
+*Legally sanctioned interception of data.For example application-layer wire tapping.
+*Helping defending against vulneribility identification and exploitation through attack detection.
+
+
+
 Mitigation:
 ----------------
-Use a centralized logging mechanism that supports multiple levels of detail. Ensure that all security-related successes and failures can be logged.
-For more details:-[mitre definitions](http://cwe.mitre.org/data/definitions/778.html).
+*Use a centralized logging mechanism that supports multiple levels of detail. Ensure that all security-related successes and failures can be logged.
+*Usage of Application firewalls,Intrusion detection systems(NIDS and HIDS),Network firewalls,filters built into web server S/W AND server redirects,trigger-base actions and other applications such as fraud monitoring and CRM.
 
- For guidance on building application logging mechanisms, especially related to security logging visit:- [Logging Cheat Sheet](https://www.owasp.org/index.php/Logging_Cheat_Sheet).  
+For more details:-[Mitre definitions](http://cwe.mitre.org/data/definitions/778.html).
+
+[For guidance on building application logging mechanisms, especially related to security logging visit]:- [Logging Cheat Sheet](https://www.owasp.org/index.php/Logging_Cheat_Sheet).  
 
 CVSS Base Score:
 -----------------------------
